--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "browser-sync": "2.27.10",
     "eslint": "8.15.0",
-    "eslint-config-htmlacademy": "5.1.2"
+    "eslint-config-htmlacademy": "5.1.2",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "2.7.1"
   },
   "license": "MIT",
   "scripts": {
