--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "browser-sync": "2.27.10",
     "eslint": "8.15.0",
     "eslint-config-htmlacademy": "5.1.2",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.7.1"
   },
   "license": "MIT",
